Fix the readable icon hiding on main web, showing on mobile view

--- a/bookie/static/css/base.scss
+++ b/bookie/static/css/base.scss
@@ -358,6 +358,10 @@ fieldset {
             * {
                 padding-left: .3em;
             }
+
+            .readable {
+                display: none;
+            }
         }
 
         .tags {
